--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="input-group">
         <label>Phone No.</label>
-        <input type="tel" placeholder="123 456 7890" id="telname" onkeyup="return validatePhoneno()">
+        <input type="tel" placeholder="XXX XXX XXXX" id="telname" onkeyup="return validatePhoneno()">
         <span id="phone-err"></span>
       </div>
 
